--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,16 +6,16 @@
 <body>
 <header th:replace="fragments/fragments.html :: header"></header>
 <div th:replace="fragments/fragments.html :: message"></div>
-<main id="main" class="container">
+<main id="main">
     <div class="home-videos">
         <div th:each="item : ${videos}" class="videoBlock">
             <a th:href="@{'/videos/' + ${item.id}}">
-                <video th:src="@{${item.saveFileName}}" class="videoBlock__thumbnail" controls="false"></video>
+                <video th:src="@{${item.saveFileName}}" class="videoBlock__thumbnail" poster="/static/assets/img/portfolio/portfolio-4.jpg" controls="false"></video>
                 <h4 class="videoBlock__title" th:text="${item.title}"></h4>
                 <div class="videoBlock__bottom">
                     <h6 th:if="${item.views == 1}" class="videoBlock__views" th:text="${item.views + ' view'}"></h6>
                     <h6 th:if="${item.views > 1}" class="videoBlock__views" th:text="${item.views + ' views'}"></h6>
-                    <h6 class="ml-2 fromNow">1년전</h6>
+                    <h6 class="ml-2 fromNow" th:text="${item.createdDateTime}"></h6>
                 </div>
             </a>
         </div>
@@ -23,4 +23,5 @@
 </main>
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
+<script th:replace="fragments/fragments.html :: time"></script>
 </html>
