--- a/src/main/resources/static/assets/css/index.css
+++ b/src/main/resources/static/assets/css/index.css
@@ -1,11 +1,25 @@
 #main {
-    margin-top: 100px;
+    margin: 100px 0px;
 }
+
 .home-videos {
-    display: flex;
-    justify-content: stretch;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 10px;
+    column-gap: 20px;
+}
+
+.videoBlock__thumbnail {
+    width: 300px;
+    height: 150px;
+    margin-bottom: 5px;
 }
 
 .home-videos .videoBlock {
     padding: 10px;
+}
+
+.videoBlock__bottom {
+    display: flex;
+    justify-content: stretch;
 }
