--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,11 +8,11 @@
 <div th:replace="fragments/fragments.html :: message"></div>
 <main id="main">
     <div class="home-videos">
-        <div th:each="item : ${videos}" class="videoBlock">
+        <div th:each="item : ${videos}" class="videoBlock" th:data-id="${item.id}">
             <a th:href="@{'/videos/' + ${item.id}}">
 
                 <!-- TODO: js를 활용하여 video 별로 thumbnail 삽입 -->
-                <img class="videoBlock__thumbnail" alt="Thumbnail" src="assets/img/portfolio/portfolio-4.jpg">
+                <img class="videoBlock__thumbnail" alt="Thumbnail">
 
                 <h4 class="videoBlock__title" th:text="${item.title}"></h4>
                 <div class="videoBlock__bottom">
@@ -27,4 +27,5 @@
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
 <script th:replace="fragments/fragments.html :: time"></script>
+<script th:replace="fragments/fragments.html :: showImage"></script>
 </html>
