--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -15,7 +15,7 @@
 
             <div class="row justify-content-center">
                 <div class="col-lg-6 mt-4 mt-md-0">
-                    <form th:action="@{/join}" th:object="${memberJoinForm}" method="post" role="form" class="php-email-form">
+                    <form th:action="@{/join}" th:object="${memberJoinForm}" method="post" role="form" class="needs-validation php-email-form">
                         <div class="form-group">
                             <label for="email">이메일</label>
                             <input type="email" th:field="*{email}" class="form-control" name="email" id="email" placeholder="Your Email"/>
@@ -74,4 +74,6 @@
 </main><!-- End #main -->
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
+<div th:replace="fragments/fragments.html::jsVendorFiles"></div>
+<script th:replace="fragments/fragments.html::form-validation"></script>
 </html>
