--- a/src/main/resources/templates/users/changePassword.html
+++ b/src/main/resources/templates/users/changePassword.html
@@ -37,4 +37,5 @@
 </main><!-- End #main -->
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
+<div th:replace="fragments/fragments.html::jsVendorFiles"></div>
 </html>
