--- a/src/main/resources/templates/videos/search.html
+++ b/src/main/resources/templates/videos/search.html
@@ -28,6 +28,7 @@
 </main><!-- End #main -->
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
+<div th:replace="fragments/fragments.html::jsVendorFiles"></div>
 <script th:replace="fragments/fragments.html :: time"></script>
 <script th:replace="fragments/fragments.html :: showImage"></script>
 </html>
