--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,6 +26,7 @@
 </main>
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
+<div th:replace="fragments/fragments.html::jsVendorFiles"></div>
 <script th:replace="fragments/fragments.html :: time"></script>
 <script th:replace="fragments/fragments.html :: showImage"></script>
 </html>
