--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 
             <div class="row justify-content-center">
                 <div class="col-lg-6 mt-4 mt-md-0">
-                    <form th:action="@{/login}" method="post" role="form" class="php-email-form">
+                    <form th:action="@{/login}" method="post" role="form" class="needs-validation php-email-form">
                         <div class="form-group">
                             <label for="username">이메일</label>
                             <input type="text" name="username" class="form-control" id="username"
@@ -30,7 +30,7 @@
                             <label for="password">패스워드</label>
                             <input type="password" name="password" class="form-control" id="password"/>
                             <small id="passwordHelp" class="form-text text-muted">
-                                패스워드를 입력하세요.</a>
+                                패스워드를 입력하세요.
                             </small>
                             <small class="invalid-feedback">패스워드를 입력하세요.</small>
                         </div>
@@ -41,7 +41,7 @@
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                         </div>
                         <div class="text-center">
-                            <button type="submit">가입 요청</button>
+                            <button type="submit">로그인</button>
                         </div>
                     </form>
                 </div>
@@ -51,4 +51,7 @@
 </main><!-- End #main -->
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
+<div th:replace="fragments/fragments.html::jsVendorFiles"></div>
+<script th:replace="fragments/fragments.html::form-validation"></script>
+
 </html>
