--- a/src/main/resources/templates/users/editProfile.html
+++ b/src/main/resources/templates/users/editProfile.html
@@ -39,4 +39,5 @@
 </main><!-- End #main -->
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
+<div th:replace="fragments/fragments.html::jsVendorFiles"></div>
 </html>
