--- a/src/main/resources/templates/videos/upload.html
+++ b/src/main/resources/templates/videos/upload.html
@@ -56,5 +56,6 @@
 </main><!-- End #main -->
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
+<div th:replace="fragments/fragments.html::jsVendorFiles"></div>
 <script src="/assets/js/videoRecorder.js"></script>
 </html>
