--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="form-group">
                             <label for="password">패스워드</label>
-                            <input type="password" th:field="*{password}" class="form-control" name="password" id="password"/>
+                            <input type="password" th:field="*{password}" class="form-control" name="password" id="password" autocomplete="on"/>
                             <small id="passwordHelp" class="form-text text-muted">
                                 8자 이상 50자 이내로 입력하세요. 영문자, 숫자, 특수기호를 사용할 수 있으며 공백은 사용할 수 없습니다.
                             </small>
@@ -49,7 +49,7 @@
                         </div>
                         <div class="form-group">
                             <label for="password2">패스워드 확인</label>
-                            <input type="password" th:field="*{password2}" class="form-control" name="password2" id="password2"/>
+                            <input type="password" th:field="*{password2}" class="form-control" name="password2" id="password2" autocomplete="on"/>
                             <small id="passwordHelp" class="form-text text-muted">
                                 8자 이상 50자 이내로 입력하세요. 영문자, 숫자, 특수기호를 사용할 수 있으며 공백은 사용할 수 없습니다.
                             </small>
