--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,6 +14,11 @@
             </div>
 
             <div class="row justify-content-center">
+                <div th:if="${param.error}" class="alert alert-danger" role="alert">
+                    <p>이메일 과 패스워드가 정확하지 않습니다.</p>
+                    <p>또는 확인 되지 않은 이메일을 사용했습니다. 이메일을 확인해 주세요.</p>
+                </div>
+
                 <div class="col-lg-6 mt-4 mt-md-0">
                     <form th:action="@{/login}" method="post" role="form" class="needs-validation php-email-form">
                         <div class="form-group">
@@ -28,7 +33,7 @@
                         </div>
                         <div class="form-group">
                             <label for="password">패스워드</label>
-                            <input type="password" name="password" class="form-control" id="password"/>
+                            <input type="password" name="password" class="form-control" id="password" autocomplete="on"/>
                             <small id="passwordHelp" class="form-text text-muted">
                                 패스워드를 입력하세요.
                             </small>
