feat: Create thumbnail when edit profile

--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -27,10 +27,12 @@
     <!-- Template Main CSS File -->
     <link href="/assets/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="/assets/css/footer.css">
     <link rel="stylesheet" href="/assets/css/index.css">
-    <link rel="stylesheet" href="/assets/css/videoDetail.css">
-    <link rel="stylesheet" href="/assets/css/upload.css">
-    <link rel="stylesheet" href="/assets/css/editVideo.css">
+    <link rel="stylesheet" href="/assets/css/user/userDetail.css">
+    <link rel="stylesheet" href="/assets/css/video/videoDetail.css">
+    <link rel="stylesheet" href="/assets/css/video/upload.css">
+    <link rel="stylesheet" href="/assets/css/video/editVideo.css">
 
     <!-- Custom CSS File-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -46,7 +48,7 @@
 
 </head>
 <header th:fragment="header" id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
+    <div class="d-flex align-items-center">
 
         <h1 class="logo mr-auto">
             <a th:href="@{/}">
