--- a/src/main/resources/static/assets/css/index.css
+++ b/src/main/resources/static/assets/css/index.css
@@ -1,8 +1,9 @@
 #main {
-    margin: 100px 0px;
+    margin-top: 100px;
 }
 
 .home-videos {
+    padding: 20px 100px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     row-gap: 10px;
