refactor: Divide editProfile, changeName

--- a/src/main/resources/templates/users/userDetail.html
+++ b/src/main/resources/templates/users/userDetail.html
@@ -18,6 +18,9 @@
             <a href="/members/edit-profile" class="get-started-btn">
                 ✏️ Edit Profile
             </a>
+            <a href="/members/change-name" class="get-started-btn">
+                🖋 Change Name
+            </a>
             <a href="/members/change-email" class="get-started-btn">
                 ️📠 Change Email
             </a>
