--- a/src/main/resources/templates/videos/upload.html
+++ b/src/main/resources/templates/videos/upload.html
@@ -20,6 +20,9 @@
                 <div class="form-group">
                     <label for="thumbnailImageFile">Thumbnail</label>
                     <input type="file" th:field="*{thumbnailImageFile}" id="thumbnailImageFile" name="thumbnailImageFile" accept="image/*" required="true">
+                    <div class="imageWrap">
+                        <img class="thumb_image" style="width: 100px">
+                    </div>
                 </div>
 
                 <div class="form-group">
@@ -58,4 +61,5 @@
 <footer th:replace="fragments/fragments.html :: footer"></footer>
 <div th:replace="fragments/fragments.html::jsVendorFiles"></div>
 <script src="/assets/js/video/videoRecorder.js"></script>
+<script src="/assets/js/video/upload.js"></script>
 </html>
