feat: Create video list API by member name

--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -91,7 +91,7 @@
     </button>
 </div>
 
-<footer th:fragment="footer" class="footer">
+<footer th:fragment="footer" id="footer">
     <div class="container d-md-flex py-4">
         <div class="mr-md-auto text-center text-md-left">
             <div class="copyright">
