--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 <body>
 <header th:replace="fragments/fragments.html :: header"></header>
 <div th:replace="fragments/fragments.html :: message"></div>
-<main id="main">
+<main id="main" data-page="main">
     <div class="home-videos">
         <!-- video 삽입 -->
     </div>
