--- a/src/main/resources/static/assets/css/user/userDetail.css
+++ b/src/main/resources/static/assets/css/user/userDetail.css
@@ -1,3 +1,34 @@
 #main .user-profile {
     text-align: center;
 }
+
+.list-group-item.active {
+    background-color: #3b4ef8;
+    border-color: #3b4ef8;
+}
+
+.home-videos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 10px;
+    column-gap: 20px;
+}
+
+.videoBlock__thumbnail {
+    width: 300px;
+    height: 150px;
+}
+
+.home-videos .videoBlock {
+    padding: 10px;
+}
+
+.videoBlock__bottom {
+    display: flex;
+    justify-content: stretch;
+}
+
+#main #moreVideoButton {
+    margin-left: 0;
+    width: 100%;
+}
